--- a/apps/playground/styles/globals.css
+++ b/apps/playground/styles/globals.css
@@ -1,47 +1,24 @@
-/*
-## Usage
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-    <link href=preset.css rel=stylesheet>
 
-## Info
-
-- author: Tommy Hodgins
-- license: MIT
-- website: https://github.com/tomhodgins/preset
-
-*/
-
-* {
-  box-sizing: border-box;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-kerning: auto;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
+}
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
 }
 
-html, body {
-    position: absolute;
-  top: 0px;
-  font-family: sans-serif;
-  -webkit-text-size-adjust: 100%;
-  padding: 0;
-  margin: 0;
-}
 
-@font-face {
-  font-family: Jura-Bold;
-  src: url('../fonts/jura/static/Jura-Bold.ttf');
-}
-
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: #f5f5f5;
-  color: #333;
-  font-family: Jura-Bold, sans-serif;
-  font-size: 2em;
-  text-align: center;
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
 }
